# django-example

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  requirements.dev.txt  requirements.txt
src/: requirements.txt
src/apps/account/: models.py  urls.py  views.py
src/apps/account/api/: serializers.py  urls.py
src/apps/account/migrations/: 0001_initial.py
src/apps/authentication/: exceptions.py  urls.py  views.py
src/apps/authentication/api/: urls.py  views.py
src/apps/testapp/: apps.py  urls.py
src/apps/testapp/api/: urls.py  views.py
src/core/: asgi.py  permissions.py  settings.py  urls.py  utils.py  views.py  wsgi.py
src/core/authentication/: views.py
